--- a/JigsawDeveloperCenter.html
+++ b/JigsawDeveloperCenter.html
@@ -40,7 +40,7 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -344,7 +344,7 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -352,7 +352,7 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -360,7 +360,7 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -375,14 +375,14 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@é»‘ä½“";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
@@ -403,7 +403,7 @@ href="JigsawDeveloperCenter.files/colorschememapping.xml">
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -427,14 +427,14 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"´¿ÎÄ±¾ Char";
+	mso-style-link:"çº¯æ–‡æœ¬ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:none;
 	font-size:10.5pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";
 	mso-font-kerning:1.0pt;}
@@ -453,7 +453,7 @@ p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -476,7 +476,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -491,16 +491,16 @@ span.MsoBookTitle
 	letter-spacing:.25pt;
 	font-weight:bold;}
 span.Char
-	{mso-style-name:"´¿ÎÄ±¾ Char";
+	{mso-style-name:"çº¯æ–‡æœ¬ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:´¿ÎÄ±¾;
+	mso-style-link:çº¯æ–‡æœ¬;
 	mso-bidi-font-size:10.5pt;
-	font-family:ËÎÌå;
-	mso-ascii-font-family:ËÎÌå;
-	mso-fareast-font-family:ËÎÌå;
+	font-family:å®‹ä½“;
+	mso-ascii-font-family:å®‹ä½“;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";}
 span.SpellE
@@ -536,7 +536,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -565,99 +565,99 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b style='mso-bidi-font-weight:normal'><span lang=EN-US
-style='font-size:24.0pt;font-family:ºÚÌå;mso-bidi-font-family:ËÎÌå'><a
+style='font-size:24.0pt;font-family:é»‘ä½“;mso-bidi-font-family:å®‹ä½“'><a
 href="https://kvzmstudios.github.io/"><span style='color:windowtext;text-decoration:
 none;text-underline:none'>KVZM Studios</span></a><o:p></o:p></span></b></p>
 
 <p class=MsoPlainText><b style='mso-bidi-font-weight:normal'><span lang=EN-US
-style='font-size:14.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Jigsaw</span></b><b style='mso-bidi-font-weight:normal'><span
-style='font-size:14.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>¿ª·¢ÕßÖĞĞÄ<span lang=EN-US><o:p></o:p></span></span></b></p>
+style='font-size:14.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Jigsaw</span></b><b style='mso-bidi-font-weight:normal'><span
+style='font-size:14.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>å¼€å‘è€…ä¸­å¿ƒ<span lang=zh-CN><o:p></o:p></span></span></b></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>ÎÒÃÇÎª<span lang=EN-US>Jigsaw</span>¿ª·¢ÕßÌá¹©ÁËÒÔÏÂ¹¤¾ß£º<span lang=EN-US><o:p></o:p></span></span></p>
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>æˆ‘ä»¬ä¸º<span lang=EN-US>Jigsaw</span>å¼€å‘è€…æä¾›äº†ä»¥ä¸‹å·¥å…·ï¼š<span lang=EN-US><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoPlainText><span class=SpellE><u><span lang=EN-US style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>JigsawUIApps</span></u></span><u><span
-style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>Ä£°å<span lang=EN-US><o:p></o:p></span></span></u></p>
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>JigsawUIApps</span></u></span><u><span
+style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>æ¨¡æ¿<span lang=EN-US><o:p></o:p></span></span></u></p>
 
-<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>¿ª·¢ÕßÄ£¿é<span lang=EN-US><o:p></o:p></span></span></u></p>
+<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>å¼€å‘è€…æ¨¡å—<span lang=EN-US><o:p></o:p></span></span></u></p>
 
-<p class=MsoPlainText><u><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>¿ª·¢ÕßÎÄµµ<span lang=EN-US><o:p></o:p></span></span></u></p>
+<p class=MsoPlainText><u><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>å¼€å‘è€…æ–‡æ¡£<span lang=EN-US><o:p></o:p></span></span></u></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><u><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>¡¤ĞÂÍÆ³ö£º<span lang=EN-US><o:p></o:p></span></span></u></p>
+<p class=MsoPlainText><u><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>Â·æ–°æ¨å‡ºï¼š<span lang=EN-US><o:p></o:p></span></span></u></p>
 
-<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
+<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
 
-<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>³ÌĞò°ü´ò°ü³ÌĞò<span lang=EN-US>(Preview)<o:p></o:p></span></span></u></p>
-
-<p class=MsoPlainText><i style='mso-bidi-font-style:normal'><u><span
-lang=EN-US style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>[</span></u></i><i
-style='mso-bidi-font-style:normal'><u><span style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>½éÉÜ£º½«<span lang=EN-US>exe</span>³ÌĞò´ò°ü³É<span lang=EN-US>Jigsaw</span>×¨Êô¸ñÊ½<span
-lang=EN-US>(.jar)</span>·½±ã°²×°£¬Ä¿Ç°½öÖ§³Öµ¥ÎÄ¼ş¡£<span lang=EN-US>]<o:p></o:p></span></span></u></i></p>
-
-<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
-
-<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>³ÌĞò°ü°²×°³ÌĞò<span lang=EN-US>(Preview)<o:p></o:p></span></span></u></p>
+<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>ç¨‹åºåŒ…æ‰“åŒ…ç¨‹åº<span lang=EN-US>(Preview)<o:p></o:p></span></span></u></p>
 
 <p class=MsoPlainText><i style='mso-bidi-font-style:normal'><u><span
-lang=EN-US style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>[</span></u></i><i
-style='mso-bidi-font-style:normal'><u><span style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>½éÉÜ£º°²×°<span lang=EN-US>.jar</span>³ÌĞò<span lang=EN-US>]<o:p></o:p></span></span></u></i></p>
+lang=EN-US style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>[</span></u></i><i
+style='mso-bidi-font-style:normal'><u><span style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>ä»‹ç»ï¼šå°†<span lang=EN-US>exe</span>ç¨‹åºæ‰“åŒ…æˆ<span lang=EN-US>Jigsaw</span>ä¸“å±æ ¼å¼<span
+lang=EN-US>(.jar)</span>æ–¹ä¾¿å®‰è£…ï¼Œç›®å‰ä»…æ”¯æŒå•æ–‡ä»¶ã€‚<span lang=EN-US>]<o:p></o:p></span></span></u></i></p>
+
+<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
+
+<p class=MsoPlainText><u><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Jigsaw</span></u><u><span style='mso-hansi-font-family:
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>ç¨‹åºåŒ…å®‰è£…ç¨‹åº<span lang=EN-US>(Preview)<o:p></o:p></span></span></u></p>
+
+<p class=MsoPlainText><i style='mso-bidi-font-style:normal'><u><span
+lang=EN-US style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>[</span></u></i><i
+style='mso-bidi-font-style:normal'><u><span style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>ä»‹ç»ï¼šå®‰è£…<span lang=EN-US>.jar</span>ç¨‹åº<span lang=EN-US>]<o:p></o:p></span></span></u></i></p>
 
 <p class=MsoNormal><i><u><span lang=EN-US style='mso-bidi-font-size:10.5pt;
-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></i></p>
+font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></i></p>
 
 <p class=MsoNormal><u><span lang=EN-US style='mso-bidi-font-size:10.5pt;
-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
+font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'><o:p><span style='text-decoration:none'>&nbsp;</span></o:p></span></u></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
-minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>ÉÏÊöÎÄ¼şÇë</span><span
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
+minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>ä¸Šè¿°æ–‡ä»¶è¯·</span><span
 lang=EN-US><a href="https://kvzmstudios.lanzoui.com/b01ufkpli"><span
-lang=EN-US style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;mso-ascii-theme-font:
-minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:minor-fareast;
-mso-bidi-font-family:ËÎÌå'><span lang=EN-US>µãÎÒ</span></span></a></span><span
-style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;
-mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:
-Calibri;mso-hansi-theme-font:minor-latin'>ÏÂÔØ</span></p>
+lang=EN-US style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;mso-ascii-theme-font:
+minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:minor-fareast;
+mso-bidi-font-family:å®‹ä½“'><span lang=EN-US>ç‚¹æˆ‘</span></span></a></span><span
+style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;
+mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:
+Calibri;mso-hansi-theme-font:minor-latin'>ä¸‹è½½</span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>(</span><span style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>ÃÜÂë£º<span lang=EN-US>5opv</span>£©<span lang=EN-US><o:p></o:p></span></span></p>
-
-<p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>(</span><span style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>å¯†ç ï¼š<span lang=EN-US>5opv</span>ï¼‰<span lang=EN-US><o:p></o:p></span></span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>ÁªÏµ·½Ê½£º<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
+<p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
+
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
 on Word<o:p></o:p></span></p>
 
 </div>
